all change design

--- a/templates/Public/about.html.twig
+++ b/templates/Public/about.html.twig
@@ -58,6 +58,7 @@
       	}
       	.textunder{
       		margin-top: 50vh;
+      		padding-top: 30vh;
       		text-shadow: 1px 1px 2px #000000;
       		text-align: justify;
       	}
@@ -67,7 +68,7 @@
 <div class="amber hfull">
 	<div class="container">
 		<div class="row center-align">
-			<h1 class="titlepage"><a class="tit" href="#!">A propos Web CV</a></h1>
+			<h1 class="titlepage tit">A propos Web CV</h1>
 		</div>
 		<div class="row">
 			<p class="flow-text textunder white-text">
