--- a/templates/Public/form.html.twig
+++ b/templates/Public/form.html.twig
@@ -1,18 +1,18 @@
 {{ form_start(form) }}
     
     <div class="row"> 
-    		<div class="card br20 white col s8 offset-s2">
+    		<div class="card br20 white col s10 offset-s1">
     			<div class="container">
     				<div class="row">
-	    				<div class="input-field col s8 offset-s2">
+	    				<div class="input-field col s6">
 							{{ form_row(form.name) }}
 						</div>
-						<div class="input-field col s8 offset-s2">
+						<div class="input-field col s6">
 		          			{{ form_row(form.email) }}
 	    				</div>
 	    			</div>
 		          	<div class="row">
-		          		<div class="input-field col s6 offset-s3">
+		          		<div class="input-field col s6">
 							{{ form_row(form.objet) }}
 		          		</div>
 		          	</div>
