--- a/templates/Public/home.html.twig
+++ b/templates/Public/home.html.twig
@@ -4,22 +4,22 @@
 	    <div class="carousel-item" href="#one!">
 	    	<img src="{{ asset('build/application.jpg') }}">
 	    	<div class="contentshome center-align">
-	    		<h2>Web CV</h2>
-	      		<p class="flow-text">Création de votre Cv</p>
+	    		<h3 class="t1 black-text">Web CV</h3>
+	      		<pre class="flow-text black-text">Création de votre Cv</pre>
 	    	</div>
 	    </div>
 	    <div class="carousel-item amber white-text" href="#two!">
 	    	<img src="{{ asset('build/entrepreneur.png') }}">
 	    	<div class="contentshome center-align">
-		      	<h2>A Propos de WEB CV</h2>
-		      	<p class="flow-text">Qu'elle est le but de ce site? Je vous dit tous!</p>
+		      	<h3 class="t1">A Propos de WEB CV</h3>
+		      	<pre class="flow-text">Qu'elle est le but de ce site? Je vous dit tous!</pre>
 		    </div>
 	    </div>
 	    <div class="carousel-item green white-text" href="#three!">
 	    	<img src="{{ asset('build/contact.jpg') }}">
 	    	<div class="contentshome center-align">
-		      	<h2>Des Questions ?</h2>
-		      	<p class="flow-text">Vous pouvez nous contacter!</p>
+		      	<h3 class="t1 black-text">Des Questions ?</h3>
+		      	<pre class="flow-text black-text">Vous pouvez nous contacter!</pre>
 		    </div>
 	    </div>
   	</div>
