--- a/templates/cv/new.html.twig
+++ b/templates/cv/new.html.twig
@@ -3,17 +3,16 @@
 {% block title %}New Cv{% endblock %}
 
 {% block body %}
-	<div class="container">
-    	<div class="row">
-      		<div class="card br20 blue-grey lighten-5 center-align">
-			    <h1>Créer un Cv</h1>
+	<div class="light-green lighten-3">
+		<div class="container">
+    		<div class="row">
+      			<div class="card br20 blue-grey lighten-5 center-align">
+			    	<h1>Créer un Cv</h1>
 
-			    {{ include('cv/_form.html.twig') }}
-			    <div class="row left">
-			     	<a class="btn blue waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
-			 	</div>
+			    	{{ include('cv/_form.html.twig') }}
+			    	
+				</div>
 			</div>
 		</div>
 	</div>
-
 {% endblock %}
