--- a/templates/cv/show.html.twig
+++ b/templates/cv/show.html.twig
@@ -34,7 +34,7 @@
     {% endblock %}
 
 {% block body %}
-    <div class=" blue darken-4">
+    <div class=" blue darken-4 hfull">
         <div class="container">
         <div class="row">
             <div class="right-align col s12">
