--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,7 @@
 {# templates/security/login.html.twig #} {% extends 'base.html.twig' %} {% block
 title %}Connexion{% endblock %} {% block body %}
-<div class="container">
+<div class="light-blue lighten-3 hfull  ">
+    <div class="container">
     <div class="row">
       <div class="card br20 blue-grey lighten-5 center-align">
         <h1>Connexion WEB CV !</h1>
@@ -63,6 +64,5 @@ title %}Connexion{% endblock %} {% block body %}
           </div>
         </div>
       </div>
-      
-    
+</div>
 {% endblock %}
