--- a/templates/back/search/_form.html.twig
+++ b/templates/back/search/_form.html.twig
@@ -1,10 +1,10 @@
 {{ form_start(form) }}
     {#{ form_widget(form) }#}
     <div class="row">
-      <div class="card br20 white col s8 offset-s2">
+      <div class="card br20 blue-grey col s8 offset-s2">
           <div class="container">
             <div class="row">
-              <div class="input-field col s12">
+              <div class="input-field white-text col s12">
                 {{ form_row(form.search) }}
               </div>
               <div class="row center-align">
