--- a/templates/back/user/index.html.twig
+++ b/templates/back/user/index.html.twig
@@ -4,12 +4,9 @@
     {% block stylesheets %}
         <style type="text/css">
             .hfull{
-                height: 100vh;
-                padding-top: 40px;
+                min-height: 100vh;
             }
-            .br20{
-                border-radius: 20px;
-            }
+            
             .container90{
                 width:90%;
                 margin: auto;
@@ -25,16 +22,18 @@
                 width: 200px!important;
                 right:-50px;
             }
+            .height30{
+            height: 300px;
+        }
         </style>
     {% endblock %}
 
 {% block body %}
-    <div class="grey hfull">
-            <div class="row">
-                    <div class="card grey lighten-1 ">
-                        <h1 class="pad5">Gestion des Utilisateurs</h1>
-                        <div class="container90">
-                            <div class="row">
+                    <div class="blue-grey darken-3 hfull">
+                        {% include 'back/menu_admin.html.twig' %}
+                        <div class="container90 blue-grey br20">
+                            <h1 class="pad5">Gestion des Utilisateurs</h1>
+                            <div class="row container90">
                                 <p class="flow-text">Pour modifier le rôle d'un utilisateur, cliquer sur les icônes correspondant au rôle que vous souhaitez attribuer à celui-ci : </p>
                                 <p><i class="material-icons blue-text text-lighten-4">person</i> Pour le "ROLE_USER" </p>
                                 <p><i class="material-icons teal-text text-lighten-4">person</i> Pour le "ROLE_USER_ADMIN" </p>
@@ -64,40 +63,24 @@
                                   <li><a class=" orange-text" href="{{ path('user_filter', {'val': 'desc'})}}">DESC</a></li>
                                 </ul>
 
-                            <div id="donneefiltre">
-                            <table class="table striped br20 col s12 pad5">
-                            <thead>
-                                <tr>
-                                    <th colspan="10%">Id</th>
-                                    <th colspan="15%">Name</th>
-                                    <th colspan="15%">Email</th>
-                                    <th colspan="15%">Roles</th>
-                                    <th colspan="45%">actions</th>
-                                </tr>
-                            </thead>
-                                <tbody>
-                                        {% include "back/user/loop.html.twig" %} 
-                                </tbody>
-                            
-                        </table>
-                                    </div>
-                        </div>
-                        </div>
-                        
-                        
-
-                        <div class="row">
-                            <a class="left white-text grey wave-light btn large waves-effect" href="{{ path('app_admin_home')}}">Retour Int.Admin</a>
+                                <div id="donneefiltre">
+                                    <table class="table striped br20 col s12 pad5">
+                                        <thead>
+                                            <tr>
+                                                <th colspan="10%">Id</th>
+                                                <th colspan="15%">Name</th>
+                                                <th colspan="15%">Email</th>
+                                                <th colspan="15%">Roles</th>
+                                                <th colspan="45%">actions</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {% include "back/user/loop.html.twig" %} 
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    
-
-                    
-            </div>
-        </div>
-    </div>
     
-    {% block javascript %}
-        
-    {% endblock %}
 {% endblock %}
