--- a/templates/back/user/loop.html.twig
+++ b/templates/back/user/loop.html.twig
@@ -25,9 +25,9 @@
                     <div class="col s3">
                         {{ include('back/user/_delete_form.html.twig') }}
                     </div>
-                    <div class="col s3">
-                        <a class="btn wave-effect wave-light blue" href="{{ path('user_edit', {'id': user.id}) }}"><i class="medium material-icons white-text">edit</i></a>
-                    </div>
+                    <!--<div class="col s3">
+                        <a class="btn wave-effect wave-light blue" href="{{ path('user_edit', {'id': user.id}) }}"><i class="medium material-icons white-text">edit</i></a> 
+                    </div>-->
                 </div>
             {% endif %}
             
