--- a/templates/center_interest/_form.html.twig
+++ b/templates/center_interest/_form.html.twig
@@ -14,6 +14,9 @@
 				    	</div>
 				    </div>
 				</div>
+			    	<div class="row left">
+    			     	<a class="btn blue waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
+    			 	</div>
 			</div>
 		</div>
     
