--- a/templates/contact_information/new.html.twig
+++ b/templates/contact_information/new.html.twig
@@ -3,15 +3,15 @@
 {% block title %}New ContactInformation{% endblock %}
 
 {% block body %}
-	<div class="container">
-    	<div class="row">
-      		<div class="card br20 blue-grey lighten-5 center-align">
-			    <h1>Ajouter des informations de contact</h1>
+	<div class="light-green lighten-3 hfull">
+		<div class="container">
+	    	<div class="row">
+	      		<div class="card br20 blue-grey lighten-5 center-align">
+				    <h1>Ajouter des informations de contact</h1>
 
-			    {{ include('contact_information/_form.html.twig') }}
-			    <div class="row left">
-			     	<a class="btn blue waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
-			 	</div>
+				    {{ include('contact_information/_form.html.twig') }}
+				    
+				</div>
 			</div>
 		</div>
 	</div>
