--- a/templates/cv/index.html.twig
+++ b/templates/cv/index.html.twig
@@ -3,43 +3,44 @@
 {% block title %}Mes CV{% endblock %}
 
 {% block body %}
-<div class="container">
-    <div class="row center-align">
-            <h1>Mes CV</h1>
-            <p>retrouver tous mes CV </p>
-    </div> 
-</div>
-<div class="container ">
-    <div class="row">
-       {% for cv in cvs %}
-        <div class="col s12 m4 l4">
-            <a href="{{ path('cv_show', {'id': cv.id}) }}">
-            <div class="card hoverable" style="border-radius: 20px">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="{{ asset('build/portfolio.png') }}">
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">{{ cv.name }} <i class="green-text small right material-icons">visibility</i></span>
-                </div>    
-            </div>
-            </a>
-        </div>  
-        {% else %}
-                
-        {% endfor %}
-        <div class="col s12 m4 l4">
-            <a href="{{ path('cv_new') }}">
-            <div class="card hoverable" style="border-radius: 20px">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="{{ asset('build/portfolio.png') }}">
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Créer un nouveau CV <i class="green-text small right material-icons">add_circle</i></span>
-                </div> 
-            </div>
-            </a>
+    <div class="amber lighten-5 hfull">
+        <div class="container">
+            <div class="row center-align">
+                    <h1>Mes CV</h1>
+                    <p>retrouver tous mes CV </p>
+            </div> 
         </div>
-    </div>
-</div>
-    
+        <div class="container ">
+            <div class="row">
+               {% for cv in cvs %}
+                <div class="col s12 m3 l3">
+                    <a href="{{ path('cv_show', {'id': cv.id}) }}">
+                    <div class="card hoverable" style="border-radius: 20px">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="{{ asset('build/portfolio.png') }}">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">{{ cv.name }} <i class="green-text small right material-icons">visibility</i></span>
+                        </div>    
+                    </div>
+                    </a>
+                </div>  
+                {% else %}
+                        
+                {% endfor %}
+                <div class="col s12 m3 l3">
+                    <a href="{{ path('cv_new') }}">
+                    <div class="card hoverable" style="border-radius: 20px">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="{{ asset('build/portfolio.png') }}">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Créer un nouveau CV <i class="light-blue-text text-darken-4 small right material-icons">add_circle</i></span>
+                        </div> 
+                    </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>    
 {% endblock %}
