--- a/templates/professional_course/edit.html.twig
+++ b/templates/professional_course/edit.html.twig
@@ -3,20 +3,22 @@
 {% block title %}Edit ProfessionalCourse{% endblock %}
 
 {% block body %}
-	<div class="container">
-    	<div class="row">
-      		<div class="card br20 blue-grey lighten-5 center-align">
-			    <h1>Modifier le parcour professionnel</h1>
-			    <div class="row">
-			    	{{ include('professional_course/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
-			    </div>
+	<div class="light-green lighten-3 hfull">
+		<div class="container">
+	    	<div class="row">
+	      		<div class="card br20 blue-grey lighten-5 center-align">
+				    <h1>Modifier le parcour professionnel</h1>
+				    <div class="row">
+				    	{{ include('professional_course/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+				    </div>
 
-			     <div class="row left">
-			     	<a class="btn blue waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
-			 	</div>
-			 	<div class="row">
-			    	{{ include('professional_course/_delete_form.html.twig') }}
-			    </div>
+				     <div class="row left">
+				     	<a class="btn blue waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
+				 	</div>
+				 	<div class="row">
+				    	{{ include('professional_course/_delete_form.html.twig') }}
+				    </div>
+				</div>
 			</div>
 		</div>
 	</div>
