--- a/templates/registration/index.html.twig
+++ b/templates/registration/index.html.twig
@@ -1,6 +1,7 @@
 {# templates/registration/index.html.twig #} {% extends 'base.html.twig' %} {%
 block body %}
-<div class="container">
+<div class="light-blue lighten-3 hfull">
+  <div class="container">
   	<div class="row">
   		<div class="card br20 blue-grey lighten-5 center-align">
   			<h1>Formulaire d'inscription</h1>
@@ -37,5 +38,6 @@ block body %}
           	{{ form_end(form) }}
   		</div>
   	</div>
+  </div>
 </div>
 {% endblock %}
