--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Reset your password{% endblock %}
 
 {% block body %}
+<div class="light-blue lighten-3 hfull">
     {% for flashError in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
@@ -38,4 +39,5 @@
                     </div>
                 </div>
             </div>
+        </div>
 {% endblock %}
