--- a/templates/training/new.html.twig
+++ b/templates/training/new.html.twig
@@ -3,18 +3,16 @@
 {% block title %}New Training{% endblock %}
 
 {% block body %}
-	<div class="container">
-    	<div class="row">
-      		<div class="card br20 blue-grey lighten-5 center-align">
-    			<h1>Ajouter une Formation</h1>
+    <div class="light-green lighten-3 hfull">
+    	<div class="container">
+        	<div class="row">
+          		<div class="card br20 blue-grey lighten-5 center-align">
+        			<h1>Ajouter une Formation</h1>
 
-    			{{ include('training/_form.html.twig') }}
-    			<div class="row left">
-			     	<a class="btn blue waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
-			 	</div>
-    		</div>
-    	</div>
+        			{{ include('training/_form.html.twig') }}
+        			
+        		</div>
+        	</div>
+        </div>
     </div>
-
-    
 {% endblock %}
