update design and add search user

--- a/templates/Public/contact.html.twig
+++ b/templates/Public/contact.html.twig
@@ -73,8 +73,8 @@
 			<h1 class="titlepage tit">Contact</h1>
 		</div>
 		<div class="row textunder">
-			<div class="col s4">
-				<p class="flow-text white-text">
+			<div class="col s12 m12 l4">
+				<p class="flow-text white-text center-align">
 				Vous souhaitez nous faire part d'erreur sur le site?<br>
 				De fonctionnalité que vous souhaiteriez voir sur celui-ci ?<br><br>
 				N'hésiter pas à nous envoyer un mail à partir du formulaire. <br><br>
@@ -82,7 +82,7 @@
 				</p>
 
 			</div>
-			<div class="col s8">
+			<div class="col s12 m12 l8">
 				{% include 'public/form.html.twig' %}
 			</div>
 		</div>
