--- a/templates/Public/home.html.twig
+++ b/templates/Public/home.html.twig
@@ -1,28 +1,29 @@
 {% extends 'base.html.twig' %}
 {% block title %}Accueil Web CV{% endblock %} {% block body %}
-	<div class="carousel carousel-slider center white-text ">
-	    <div class="carousel-item" href="#one!">
-	    	<img src="{{ asset('build/application.jpg') }}">
-	    	<div class="contentshome center-align">
-	    		<h3 class="t1 black-text">Web CV</h3>
-	      		<pre class="flow-text black-text">Création de votre Cv</pre>
-	    	</div>
-	    </div>
-	    <div class="carousel-item amber white-text" href="#two!">
-	    	<img src="{{ asset('build/entrepreneur.png') }}">
-	    	<div class="contentshome center-align">
-		      	<h3 class="t1">A Propos de WEB CV</h3>
-		      	<pre class="flow-text">Qu'elle est le but de ce site? Je vous dit tous!</pre>
+	<div class="show-on-medium-and-up">
+		<div class="carousel carousel-slider center white-text">
+		    <div class="carousel-item" href="#one!">
+		    	<img src="{{ asset('build/application.jpg') }}">
+		    	<div class="contentshome center-align">
+		    		<h3 class="t1 black-text">Web CV</h3>
+		      		<pre class="flow-text black-text">Création de votre Cv</pre>
+		    	</div>
 		    </div>
-	    </div>
-	    <div class="carousel-item green white-text" href="#three!">
-	    	<img src="{{ asset('build/contact.jpg') }}">
-	    	<div class="contentshome center-align">
-		      	<h3 class="t1 black-text">Des Questions ?</h3>
-		      	<pre class="flow-text black-text">Vous pouvez nous contacter!</pre>
+		    <div class="carousel-item amber white-text" href="#two!">
+		    	<img src="{{ asset('build/entrepreneur.png') }}">
+		    	<div class="contentshome center-align">
+			      	<h3 class="t1">A Propos de WEB CV</h3>
+			      	<pre class="flow-text">Qu'elle est le but de ce site? Je vous dit tous!</pre>
+			    </div>
 		    </div>
-	    </div>
-  	</div>
-
-
+		    <div class="carousel-item green white-text" href="#three!">
+		    	<img src="{{ asset('build/contact.jpg') }}">
+		    	<div class="contentshome center-align">
+			      	<h3 class="t1 black-text">Des Questions ?</h3>
+			      	<pre class="flow-text black-text">Vous pouvez nous contacter!</pre>
+			    </div>
+		    </div>
+	  	</div>
+	</div>
+	  	
 {% endblock %}
