--- a/templates/Public/contact.html.twig
+++ b/templates/Public/contact.html.twig
@@ -62,6 +62,46 @@
       		text-align: justify;
       		padding-top: 30vh;
       	}
+      	// Message alert
+      	.materialert{
+		    position: relative;
+		    min-width: 150px;
+		    padding: 15px;
+		    margin-bottom: 20px;
+		    margin-top: 15px;
+		    border: 1px solid transparent;
+		    border-radius: 4px;
+		    transition: all 0.1s linear;
+		    webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+		    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+		    display: -webkit-box;
+		    display: -webkit-flex;
+		    display: -ms-flexbox;
+		    display: flex;
+		    -webkit-box-align: center;
+		    -webkit-align-items: center;
+		    -ms-flex-align: center;
+		    align-items: center;
+		}
+		.materialert .material-icons{
+		    margin-right: 10px;
+		}
+		
+		
+		.materialert.success{
+		    width: 100%;
+		    min-height: 100%;
+		    z-index: 10;
+		    position: absolute;
+		    left: 0%;
+		    border-radius: 20px;
+		    text-align: center!important;
+		}
+		.materialert p{
+			font-size: 20px;
+			margin: auto;
+		}
+		
 	</style>
 {% endblock %}
 
