--- a/templates/Public/form.html.twig
+++ b/templates/Public/form.html.twig
@@ -3,6 +3,14 @@
     <div class="row"> 
     		<div class="card br20 white col s10 offset-s1">
     			<div class="container">
+    				{% for message in app.flashes('success') %}
+	    				<div class="materialert success valign-wrapper center-align white green-text">
+	    					<p>
+								<i class="material-icons">check</i>
+								Votre message à bien été envoyer ! 
+	    					</p>
+						</div>
+					{% endfor %}
     				<div class="row">
 	    				<div class="input-field col s6">
 							{{ form_row(form.name) }}
